# financial-earnings-sentiment-analysis

./: .env.example  .gitignore  CHUNK1_SUMMARY.md  CHUNK2_SUMMARY.md  CHUNK3_SUMMARY.md  CHUNK4_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: sources.yaml
src/app/: __main__.py  pipeline.py
src/app/analysis/: aggregator.py  sentiment.py
src/app/config/: settings.py
src/app/discovery/: deduplicator.py  filters.py  rss_parser.py  search.py
src/app/extraction/: cleaner.py  parser.py
src/app/fetcher/: downloader.py  robots.py
src/app/utils/: logger.py  metrics.py  storage.py
tests/: conftest.py  test_config.py  test_discovery.py  test_extraction.py  test_fetcher.py  test_logger.py  test_metrics.py  test_pipeline.py  test_sentiment.py  test_storage.py
