[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earnings-sentiment-analyzer"
version = "0.1.0"
description = "Automated NLP pipeline for analyzing sentiment in earnings-related financial articles"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.1.7,<9.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "feedparser>=6.0.10,<7.0.0",
    "newspaper3k>=0.2.8,<1.0.0",
    "vaderSentiment>=3.3.2,<4.0.0",
    "transformers>=4.35.0,<5.0.0",
    "torch>=2.1.0,<3.0.0",
    "loguru>=0.7.2,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pandas>=2.1.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<5.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "urllib3>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "black>=23.11.0,<24.0.0",
    "ruff>=0.1.6,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ipython>=8.17.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

[project.scripts]
earnings-analyzer = "app.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | data
  | outputs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
